--- a/outputs/paper/restaurant_references.bib
+++ b/outputs/paper/restaurant_references.bib
@@ -242,4 +242,67 @@ Information},
     note = {R package version 0.21},
     url = {https://bookdown.org},
   }
-    
+  
+@article{forbes2,
+    title = {Restaurants' Margins Are Fatter, But Competition Is Fierce},
+    author = {Mary Ellen Biery and Sageworks Stats},
+    year = {2018},
+    publisher = {Forbes},
+    url = {https://www.forbes.com/sites/sageworks/2018/01/26/restaurants-margins-are-fatter-but-competition-is-fierce/?sh=136e06127f9f}
+  }
+  
+  
+@article{govcan,
+    title = {Mortgage deferrals},
+    author = {Canada},
+    year = {2020},
+    publisher = {Government of Canada},
+    url = {https://www.canada.ca/en/financial-consumer-agency/services/mortgages/mortgage-deferrals.html}
+  }
+  
+  
+@article{ontgov,
+    title = {Support for Small Business Tenants and Landlords Now Available},
+    author = {Ontario},
+    year = {2020},
+    publisher = {Government of Ontario},
+    url = {https://news.ontario.ca/en/release/57049/support-for-small-business-tenants-and-landlords-now-available}
+  }  
+
+@article{blundell,
+  title = {COVID-19 and Inequalities},
+  author = {Blundell, Richard and Costa Dias, Monica and Joyce, Robert and Xu, Xiaowei},
+  journal = {Fiscal Studies},
+  volume = {41},
+  number = {2},
+  pages = {291--319},
+  year = {2020},
+  publisher = {Wiley Online Library}
+}
+  
+@article{cityto,
+    title = {COVID-19: Tenants & Property Owners},
+    author = {Toronto},
+    year = {2020},
+    publisher = {City of Toronto},
+    url = {https://www.toronto.ca/home/covid-19/covid-19-financial-social-support-for-people/covid-19-tenants-property-owners/}
+  }
+  
+@article{myers,
+  title = {Fast Food Patronage and Obesity Prevalence During the COVID-19 Pandemic: An Alternative Explanation},
+  author = {Myers, Candice A and Broyles, Stephanie T},
+  journal = {Obesity},
+  volume = {28},
+  number = {10},
+  pages = {1796--1797},
+  year = {2020},
+  publisher = {Wiley Online Library}
+}
+
+@article{wu,
+    title = {60 Percent of Canadian Restaurants Could Close In The Next Three Months Due To COVID-19, Says Industry Group},
+    author = {Leslie Wu},
+    year = {2020},
+    publisher = {Forbes},
+    url = {https://www.forbes.com/sites/lesliewu/2020/08/31/60-percent-of-canadian-restaurants-could-close-in-the-next-three-months-due-to-covid-19-says-industry-group/?sh=3d95e21328a2}
+  }
